--- a/QGISProject/Pages/FetchData.razor
+++ b/QGISProject/Pages/FetchData.razor
@@ -1,10 +1,14 @@
-﻿@page "/fetchdata"
+﻿@page "/"
 @using System.Text.Json
-@using System.Text.Json.Serialization
-@inject HttpClient client
-@inject ILogger<FetchData> Logger
+@inject HttpClient _client
+@inject NavigationManager _navigationManager
+@inject ILogger<FetchData> _logger
 
 <PageTitle>Здания</PageTitle>
+
+<h1>Панель управления</h1>
+
+<TableControlPanel />
 
 <h1>Списко зданий</h1>
 
@@ -29,6 +33,11 @@ else
                 <tr>
                     <td>@data.ID</td>
                     <td>@data.Address</td>
+                    <td>
+                        <a href='/edit/@data.ID' class="btn btn-outline-dark" role="button">Edit</a>
+                        <a href='/delete/@data.ID' class="btn btn-outline-danger" role="button">Delete</a>
+                        <button type="button" @onclick="@(e=>Delete(data.ID))">Удалить нафик</button>
+                    </td>
                 </tr>
             }
         </tbody>
@@ -38,11 +47,25 @@ else
 @code 
 {
     IList<Building> _buildingsData = default!;
-    public class Building
+
+    private async void Delete(int id)
     {
-        public int ID { get; set; }
-        public string? Geom { get; set; }
-        public string? Address { get; set; }
+        try
+        {
+            using (var request = new HttpRequestMessage(HttpMethod.Delete, $"https://localhost:7066/{id}"))
+            {
+
+                var response = await _client.SendAsync(request);
+                _logger.LogInformation($"DELETE response status: {response.StatusCode}");
+
+            }
+        }
+        catch (Exception ex)
+        {
+            _logger.LogError("Default page Delete method occured error");
+            throw ex;
+        }
+        _navigationManager.NavigateTo("/", true);
     }
 
     protected override async Task OnInitializedAsync()
@@ -51,26 +74,19 @@ else
             "https://localhost:7066/QGIS"
         );
         request.Headers.Add("accept", "application/json");
-        var response = await client.SendAsync(request);
+        var response = await _client.SendAsync(request);
 
-        Logger.LogInformation($"Status code: {response.StatusCode}");
+        _logger.LogInformation($"Status code: {response.StatusCode}");
 
         try
         {
             _buildingsData = await response.Content.ReadFromJsonAsync<List<Building>>();
+            _logger.LogInformation($"Loaded table from response as JSON: {DateTime.Now}");
         }
         catch (Exception ex) {
-            Logger.LogError(ex.Message);
+            _logger.LogError("FetchData page OnInitializedAsync method occured error");
+            _logger.LogError(ex.Message);
         }
-
-        /*if (response.IsSuccessStatusCode)
-        {
-            var responseStream = await response.Content.ReadFromJsonAsync<Building>();
-        }
-        else
-        {
-            throw new Exception(message: "Api response bad status code");
-        }*/
     }
 
 }
