--- a/QGISProject/_Imports.razor
+++ b/QGISProject/_Imports.razor
@@ -9,3 +9,6 @@
 @using QGISProject
 @using QGISProject.Shared
 @using QGISProject.Model
+@using Microsoft.Extensions.Configuration
+@using System.Text;
+@using Newtonsoft.Json
