--- a/QGISBlazorWebAssemblyApplication/_Imports.razor
+++ b/QGISBlazorWebAssemblyApplication/_Imports.razor
@@ -6,8 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using QGISProject
-@using QGISProject.Model
+@using QGISBlazorWebAssemblyApplication
+@using QGISBlazorWebAssemblyApplication.Models;
 @using Microsoft.Extensions.Configuration
 @using System.Text;
 @using Newtonsoft.Json
