--- a/QGISBlazorWebAssemblyApplication/_Imports.razor
+++ b/QGISBlazorWebAssemblyApplication/_Imports.razor
@@ -8,6 +8,6 @@
 @using Microsoft.JSInterop
 @using QGISBlazorWebAssemblyApplication
 @using QGISBlazorWebAssemblyApplication.Models;
+@using QGISBlazorWebAssemblyApplication.Shared;
 @using Microsoft.Extensions.Configuration
 @using System.Text;
-@using Newtonsoft.Json
