--- a/QGISBlazorWebAssemblyApplication/_Imports.razor
+++ b/QGISBlazorWebAssemblyApplication/_Imports.razor
@@ -11,3 +11,8 @@
 @using QGISBlazorWebAssemblyApplication.Shared;
 @using Microsoft.Extensions.Configuration
 @using System.Text;
+@using System.Text.Json
+@using NetTopologySuite.IO;
+@using NetTopologySuite.Geometries;
+@using Newtonsoft.Json
+@using System.Data.SqlTypes
